# ozm2

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ozm2/: __init__.py  dataset.py  features.py  plots.py
ozm2/modeling/: predict.py  train.py
